--- a/index.html
+++ b/index.html
@@ -4,184 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.typekit.net/prw8ysb.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Thomas Baker: Full Stack Engineer Portfolio</title>
+    <title>Tom Baker: Full Stack Engineer Portfolio</title>
 </head>
 <body>
 <!-- Navigation Bar -->
-<div class="container-fluid">
-    <div class="row">
-        <nav id="navbar-example2" class="navbar navbar-dark bg-dark opacity-75 px-3 mb-3 fixed-top">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading1">First</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading2">Second</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
-                    </ul>
-                </li>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="./images/logopink - Copy.png" alt="" width="80" height="35">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Projects</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Learn More
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#aboutTom">About Tom</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Contact</a></li>
+                </ul>
+            </li>
             </ul>
-        </nav>
+            <a target=”_blank” class="navbar-brand" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">
+                <img src="./images/icons8-linkedin-50.png" alt="LinkedIn Logo" width="35" height="35" >
+            </a>
+            <a target=”_blank” class="navbar-brand" href="https://github.com/DrWho1369">
+                <img src="./images/icons8-github-64.png" alt="Git-Hub Logo" width="35" height="35" >
+            </a>
+            <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
     </div>
-</div>
+</nav>
 <!-- Hero section containing a jumbotron -->
 <div class="jumbotron jumbotron-fluid">
-    <div class="container grey">
-        <h1 class="display-4 d-flex justify-content-center align-items-center">Thomas Baker</h1>
+    <div class="container grey ">
+        <h1 class="display-4 d-flex justify-content-center align-items-center">Tom Baker</h1>
         <p class="lead d-flex justify-content-center align-items-center">Full Stack Engineer with projects in JavaScript, Python, and React.</p>
         <p class="d-flex justify-content-center align-items-center">The foundations are laid. Stay tuned for updates.</p>
     </div>
 </div>
 <!-- End of Hero Section -->
-           <!-- Put these titles over each section and the nav bar will light up as you go over them -->
-    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-light p-3 rounded-2" tabindex="0">
-            <h4 id="scrollspyHeading2">Second heading</h4>
-            <p>...</p>
-            <h4 id="scrollspyHeading3">Third heading</h4>
-            <p>...</p>
-            <h4 id="scrollspyHeading4">Fourth heading</h4>
-            <p>...</p>
-            <h4 id="scrollspyHeading5">Fifth heading</h4>
-            <p>...</p>
-        </div>
-    <!-- Navigation Bar End -->
-
-    
 
 <!-- Work section in grid, using cards -->
-<div class="container">
-    <div class="row" id="scrollspyHeading1">
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <img src="./images/paint-brush-1317908_1920.jpg" class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small>11 mins ago</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                Hello, world! This is a toast message.
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+<a id="portfolio">
+<div class="container-fluid"></a>
+    <div class="row bg-light p-5">
+        <h1 class="text-dark text-center portfolio">PORTFOLIO</h1>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card text-dark bg-light mb-3 border-light">
+                <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">🛒 A Shopping Cart 🛒</h5>
+                    <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. Happy shopping!</p>
+                    <a href="https://github.com/DrWho1369/shopping-cart" class="btn btn-warning text-secondary">Spend Some Money</a>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card text-center text-dark bg-light mb-3 border-light">
+                <img src="./images/pexels-tima-miroshnichenko-6694543.jpg" class="card-img-top" alt="A financial calculator">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">💰 A Financial Calculator 📊</h5>
+                    <p class="card-text"> Empower your financial decisions with an Investment Calculator for simple/compound interest and a Loan Interest Repayment Calculator. Developed during Hyperion Dev Bootcamp, this open-source tool is ready for exploration and contribution.</p>
+                    <a href="https://github.com/DrWho1369/Financial-Calculators" class="btn btn-warning text-secondary">Calculate Now</a>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card text-end text-dark bg-light mb-3 border-light" >
+                <img src="./images/pexels-ann-h-18833779.jpg" class="card-img-top" alt="A Portfolio Website">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">💻 A CSS & HTML Portfolio 🚀</h5>
+                    <p class="card-text">Designed with HTML, CSS, JavaScript. Explore my front-end portfolio showcasing CSS mastery, responsiveness, and deployed projects. Seamless navigation, interactive grids, and live application links. Experience the future of web development!</p>
+                    <a href="https://github.com/DrWho1369/portfolio" class="btn btn-warning text-secondary">Check it out</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-    </div>
+
 <!-- End of work section -->
 
-<!-- Skills section -->
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Accordion Item #1
-                </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+<!-- Learn About Me section -->
+    <a id="aboutTom">
+    <div class="row bg-dark p-5"></a>
+        <h1 class="text-center text-danger">Lets Learn About Tom</h1>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item bg-dark text-warning">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Who on earth is Tom?
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Legend has it that Tom once beat a computer at chess using only his mind. Some say he's part ninja, part unicorn, and 100% mysterious. But who is Tom, really? We're still trying to figure that out ourselves.</div>
+                </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Accordion Item #2
-                </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            <div class="accordion-item bg-dark text-warning">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Does Tom even exist?
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Rumors, myths, and wild speculations surround the existence of Tom. Some believe he's an undercover superhero, while others think he's a hologram created by mischievous aliens. We're not saying he's a ghost, but has anyone actually seen him and a ghost in the same room?</div>
+                </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Accordion Item #3
-                </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            <div class="accordion-item bg-dark text-warning">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Where can one locate said Tom?
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">If you ever find yourself in a dense forest, whisper the words 'Tom, are you there?' and wait. If a squirrel starts telling you jokes, congratulations, you've found him. Alternatively, check the local coffee shops, because Tom is rumored to have a deep, unbreakable bond with caffeine and witty banter.</div>
+                </div>
             </div>
         </div>
     </div>
-<!-- End of skills section -->
+<!-- End of Learn About Me section -->
 
 <!-- About me section -->
-    <!-- Link to my socials -->
-    <button type="button" class="btn btn-primary position-relative">
-        Profile
-        <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
-            <span class="visually-hidden">New alerts</span>
-        </span>
-    </button>
-    <!-- End of link to my socials -->
+
     <!-- GIT HUB OR LINKED IN FORM INPUT -->
     <select class="form-select" aria-label="Default select example">
         <option selected>Open this select menu</option>
@@ -196,6 +154,7 @@
     <!-- End of Form input -->
     <!-- popover start -->
     <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+</div>
     <!-- Popover end -->
     <!-- Carosel of my images -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
