--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.typekit.net/prw8ysb.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Tom Baker: Full Stack Engineer Portfolio</title>
 </head>
@@ -69,7 +68,7 @@
             <div class="card text-dark bg-light mb-3 border-light">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
                 <div class="card-body">
-                    <h5 class="card-title">🛒 A Shopping Cart 🛒</h5>
+                    <h5 class="card-title">A Shopping Cart</h5>
                     <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. Happy shopping!</p>
                     <a href="https://github.com/DrWho1369/shopping-cart" class="btn btn-warning text-secondary">Spend Some Money</a>
                 </div>
@@ -79,7 +78,7 @@
             <div class="card text-center text-dark bg-light mb-3 border-light">
                 <img src="./images/pexels-tima-miroshnichenko-6694543.jpg" class="card-img-top" alt="A financial calculator">
                 <div class="card-body">
-                    <h5 class="card-title">💰 A Financial Calculator 📊</h5>
+                    <h5 class="card-title">A Financial Calculator</h5>
                     <p class="card-text"> Empower your financial decisions with an Investment Calculator for simple/compound interest and a Loan Interest Repayment Calculator. Developed during Hyperion Dev Bootcamp, this open-source tool is ready for exploration and contribution.</p>
                     <a href="https://github.com/DrWho1369/Financial-Calculators" class="btn btn-warning text-secondary">Calculate Now</a>
                 </div>
@@ -89,7 +88,7 @@
             <div class="card text-end text-dark bg-light mb-3 border-light" >
                 <img src="./images/pexels-ann-h-18833779.jpg" class="card-img-top" alt="A Portfolio Website">
                 <div class="card-body">
-                    <h5 class="card-title">💻 A CSS & HTML Portfolio 🚀</h5>
+                    <h5 class="card-title">A CSS & HTML Portfolio</h5>
                     <p class="card-text">Designed with HTML, CSS, JavaScript. Explore my front-end portfolio showcasing CSS mastery, responsiveness, and deployed projects. Seamless navigation, interactive grids, and live application links. Experience the future of web development!</p>
                     <a href="https://github.com/DrWho1369/portfolio" class="btn btn-warning text-secondary">Check it out</a>
                 </div>
@@ -101,89 +100,97 @@
 
 <!-- Learn About Me section -->
     <a id="aboutTom">
-    <div class="row bg-dark p-5"></a>
-        <h1 class="text-center text-danger">Lets Learn About Tom</h1>
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item bg-dark text-warning">
-                <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Who on earth is Tom?
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Legend has it that Tom once beat a computer at chess using only his mind. Some say he's part ninja, part unicorn, and 100% mysterious. But who is Tom, really? We're still trying to figure that out ourselves.</div>
+    <div class="row bg-dark p-5 "></a>
+        <div class="col-12 col-md-8">
+            <h1 class="text-center text-danger">Lets Learn About Tom</h1>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item bg-dark text-warning">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Who on earth is Tom?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Legend has it that Tom once beat a computer at chess using only his mind. Some say he's part ninja, part unicorn, and 100% mysterious. But who is Tom, really? We're still trying to figure that out ourselves.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="accordion-item bg-dark text-warning">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Does Tom even exist?
-                    </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Rumors, myths, and wild speculations surround the existence of Tom. Some believe he's an undercover superhero, while others think he's a hologram created by mischievous aliens. We're not saying he's a ghost, but has anyone actually seen him and a ghost in the same room?</div>
+                <div class="accordion-item bg-dark text-warning">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Does Tom even exist?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Rumors, myths, and wild speculations surround the existence of Tom. Some believe he's an undercover superhero, while others think he's a hologram created by mischievous aliens. We're not saying he's a ghost, but has anyone actually seen him and a ghost in the same room?</div>
+                    </div>
                 </div>
-            </div>
-            <div class="accordion-item bg-dark text-warning">
-                <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Where can one locate said Tom?
-                    </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">If you ever find yourself in a dense forest, whisper the words 'Tom, are you there?' and wait. If a squirrel starts telling you jokes, congratulations, you've found him. Alternatively, check the local coffee shops, because Tom is rumored to have a deep, unbreakable bond with caffeine and witty banter.</div>
+                <div class="accordion-item bg-dark text-warning">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Where can one locate said Tom?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">If you ever find yourself in a dense forest, whisper the words 'Tom, are you there?' and wait. If a squirrel starts telling you jokes, congratulations, you've found him. Alternatively, check the local coffee shops, because Tom is rumored to have a deep, unbreakable bond with caffeine and witty banter.</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    
+
+     <!-- Carosel of my images -->
+
+   
+        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-md-4 " data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./images/Untitled (8).png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="./images/Untitled (7).png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/Untitled (6).png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </row>
+    <!-- End of carosel -->
 <!-- End of Learn About Me section -->
 
 <!-- About me section -->
 
     <!-- GIT HUB OR LINKED IN FORM INPUT -->
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <div class="input-group flex-nowrap">
-        <span class="input-group-text" id="addon-wrapping">@</span>
-        <input type="text" class="form-control" placeholder="Git-Hub Username" aria-label="Git-Hub Username" aria-describedby="addon-wrapping">
+    <div class="row bg-light">
+        
     </div>
-    <!-- End of Form input -->
-    <!-- popover start -->
-    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
-</div>
     <!-- Popover end -->
-    <!-- Carosel of my images -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-            </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <!-- End of carosel -->
+   
 <!-- End of about me section -->
 
 <!-- Footer section -->
