fixed padding bugs

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <!-- Hero section containing a jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container grey ">
-        <h1 class="display-4 d-flex justify-content-center align-items-center">Tom Baker</h1>
-        <p class="lead d-flex justify-content-center align-items-center">Full Stack Engineer with projects in JavaScript, Python, and React.</p>
+        <h1 class="display-5 fw-bold d-flex justify-content-center align-items-center">Tom Baker</h1>
+        <p class="lead d-flex justify-content-center align-items-center text-center">Full Stack Engineer with projects in JavaScript, Python, and React.</p>
         <p class="d-flex justify-content-center align-items-center">The foundations are laid. Stay tuned for updates.</p>
     </div>
 </div>
@@ -62,8 +62,8 @@
 <!-- Work section in grid, using cards -->
 <a id="portfolio">
 <div class="container-fluid"></a>
-    <div class="row bg-white p-5">
-        <h1 class="text-dark text-center portfolio">PORTFOLIO</h1>
+    <div class="row bg-white p-lg-5">
+        <h1 class="text-dark text-center portfolio pt-5">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card text-dark bg-white mb-3 border-white">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
@@ -100,9 +100,9 @@
 
 <!-- Learn About Me section -->
     <a id="aboutTom">
-    <div class="row bg-light d-flex justify-content-center p-5"></a>
-        <div class="col-12 col-lg-4">
-            <h1 class="text-center text-dark">Lets Learn About Tom</h1>
+    <div class="row bg-light d-flex justify-content-center p-lg-5"></a>
+        <div class="col-12 col-lg-6">
+            <h1 class="text-center text-dark pt-5">Lets Learn About Tom</h1>
             <div class="accordion accordion-flush p-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -141,7 +141,7 @@
      <!-- Carosel of my images -->
 
    
-        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-4 " data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-6 " data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
