--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Tom Baker: Full Stack Engineer Portfolio</title>
 </head>
 <body>
+    <div class="github-static ">
+        <a target=”_blank” class="navbar-brand" href="https://github.com/DrWho1369">
+            <img src="./images/icons8-github-64.png" alt="Git-Hub Logo" width="35" height="35" >
+        </a>
+    </div>
+    <div class="linkedin-static .d-none .d-sm-block .d-md-none">
+        <a target=”_blank” class="navbar-brand" href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/">
+            <img src="./images/icons8-linkedin-50.png" alt="LinkedIn Logo" width="35" height="35" >
+        </a>
+    </div>
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -103,10 +113,10 @@
     <div class="row bg-light d-flex justify-content-center p-lg-5"></a>
         <div class="col-12 col-lg-6">
             <h1 class="text-center text-dark pt-5">Lets Learn About Tom</h1>
-            <div class="accordion accordion-flush p-5" id="accordionFlushExample">
+            <div class="accordion accordion-flush p-lg-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Who on earth is Tom?
                         </button>
                     </h2>
@@ -116,7 +126,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                         Does Tom even exist?
                         </button>
                     </h2>
@@ -126,7 +136,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                         Where can one locate said Tom?
                         </button>
                     </h2>
@@ -141,7 +151,7 @@
      <!-- Carosel of my images -->
 
    
-        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-6 " data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-6 pb-5" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -174,8 +184,46 @@
             </button>
         </div>
     </row>
-</div>
+
     <!-- End of carosel -->
+
+    <!-- Contact Me Form -->
+
+    <form class="row bg-white gy-2 gx-3 align-items-center justify-content-center p-5">
+        <h1 class="text-center">Contact Me!</h1>
+        <div class="col-auto">
+            <label class="visually-hidden" for="autoSizingInput">Name</label>
+            <input type="text" class="form-control" id="autoSizingInput" placeholder="Your Name">
+        </div>
+        <div class="col-auto">
+            <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+            <div class="input-group">
+                <div class="input-group-text">@</div>
+                <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Username">
+            </div>
+        </div>
+        <div class="col-auto">
+            <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+            <select class="form-select" id="autoSizingSelect">
+                <option selected>Account...</option>
+                <option value="1">Git-Hub</option>
+                <option value="2">LinkedIn</option>
+                <option value="3">Email</option>
+            </select>
+        </div>
+        <div class="col-auto">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="autoSizingCheck">
+                <label class="form-check-label" for="autoSizingCheck">
+                Contact me
+                </label>
+            </div>
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-dark">Submit</button>
+        </div>
+    </form>
+</div>
 <!-- End of Learn About Me section -->
 
 
