added skills section, added image to jumbotron

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 <a id="portfolio">
 <div class="container-fluid"></a>
     <div class="row bg-white p-lg-5">
+        <h2 class="text-center pb-5">Skills:</h2>
+        <h4 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h4>
+    </div>
+ 
+    <div class="row bg-white p-lg-5">
         <h1 class="text-dark text-center portfolio pt-5">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card text-dark bg-white mb-3 border-white">
