header style change and colour scheme change

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 <!-- Work section in grid, using cards -->
 <a id="portfolio">
 <div class="container-fluid"></a>
-    <div class="row bg-white p-lg-5">
-        <h2 class="text-center pb-5">Skills:</h2>
+    <div class="row bg-white p-5">
+        <h2 class="text-center pb-3 fw-bold">SKILLS:</h2>
         <h4 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h4>
     </div>
  
-    <div class="row bg-white p-lg-5">
-        <h1 class="text-dark text-center portfolio pt-5">PORTFOLIO</h1>
+    <div class="row p-lg-5" style="background-color: #ff69b4b6">
+        <h1 class="text-dark text-center portfolio pb-5 p-5 fw-bold">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card text-dark bg-white mb-3 border-white">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
-                    <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. Happy shopping!</p>
+                    <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. It's Amazing! Happy shopping!</p>
                     <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn btn-warning text-secondary shadow">Spend Some Money</a>
                 </div>
             </div>
@@ -117,7 +117,7 @@
     <a id="aboutTom">
     <div class="row bg-light d-flex justify-content-center p-lg-5"></a>
         <div class="col-12 col-lg-6">
-            <h1 class="text-center text-dark pt-5">Lets Learn About Tom</h1>
+            <h1 class="text-center text-dark p-5 fw-bold">Lets Learn About Tom</h1>
             <div class="accordion accordion-flush p-lg-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -192,7 +192,7 @@
 <!-- Contact Me Form -->
 <a id="contactSection">
     <form class="row bg-white gy-2 gx-3 align-items-center justify-content-center p-5"></a>
-        <h1 class="text-center">Contact Me!</h1>
+        <h1 class="text-center fw-bold pb-5">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
             <input type="text" class="form-control" id="autoSizingInput" placeholder="Your Name">
@@ -229,34 +229,34 @@
 <!-- End of Contact Me section -->
 
 <!-- Footer section -->
-    <div class="row">
-        <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-            <div class="container p-4 pb-0">
-                <section class="">
-                    <div class="row">
-                        <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Tom Baker ESQ
-                            </h6>
-                            <p>
-                                No pixels were harmed in the making of this site, but our web designer might need a nap. Remember, life is short, so spend it wisely – like, hunting for the mythical Tom in our archives.
-                            </p>
-                        </div>
-                        <hr class="w-100 clearfix d-md-none" />
-                        <hr class="w-100 clearfix d-md-none" />
-                        <hr class="w-100 clearfix d-md-none" />
-                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                            <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="link-light"><p>LiNKedIn Is LeFT</p></a>
-                            <a target=”_blank” href="https://github.com/DrWho1369" class="link-light"><p>GIt-hUb Is RigHT</p></a>
-
-                        </div>
+<div class="row">
+    <footer class="text-center text-lg-start text-dark" style="background-color: #ff69b4b6">
+        <div class="container p-4 pb-0">
+            <section class="">
+                <div class="row">
+                    <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">
+                            Tom Baker ESQ
+                        </h6>
+                        <p>
+                            No pixels were harmed in the making of this site, but our web designer might need a nap. Remember, life is short, so spend it wisely – like, hunting for the mythical Tom in our archives.
+                        </p>
                     </div>
-                </section>
-            </div>
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2023 Thomas Baker</div>
-        </footer>
-    </div>
+                    <hr class="w-100 clearfix d-md-none" />
+                    <hr class="w-100 clearfix d-md-none" />
+                    <hr class="w-100 clearfix d-md-none" />
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                        <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="dark-light"><p>LiNKedIn Is LeFT</p></a>
+                        <a target=”_blank” href="https://github.com/DrWho1369" class="dark-light"><p>GIt-hUb Is RigHT</p></a>
+
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.87)">© 2023 Thomas Baker</div>
+    </footer>
+</div>
 <!-- End of footer section -->
 
 <!-- Scripts -->
