--- a/index.html
+++ b/index.html
@@ -71,40 +71,40 @@
 
 <!-- Work section in grid, using cards + skills section -->
 <a id="portfolio">
-<div class="container-fluid"></a>
-    <div class="row bg-white p-lg-5">
-            <div class="col m-2" style="background-color: #ff69b486">
+<div class="container-fluid white"></a>
+    <div class="row p-lg-5">
+            <div class="col m-2 dark-red" style="background-color: #b2136821">
                 <h2 class="text-center pb-3 fw-bold">SKILLS:</h2>
                 <h6 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h6>
             </div>
         <h1 class="text-dark text-center portfolio pb-5 p-5 fw-bold">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-dark bg-white mb-3 border-white">
+            <div class="card text-dark mb-3 border-0 white">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
                     <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. It's Amazing! Happy shopping!</p>
-                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn btn-warning text-secondary shadow">Spend Some Money</a>
+                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn text-light shadow mid-red">Spend Some Money</a>
                 </div>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-md-center text-dark bg-white mb-3 border-white">
+            <div class="card text-md-center text-dark mb-3 border-0 white">
                 <img src="./images/pexels-tima-miroshnichenko-6694543.jpg" class="card-img-top" alt="A financial calculator">
                 <div class="card-body">
                     <h5 class="card-title">A Financial Calculator</h5>
                     <p class="card-text"> Empower your financial decisions with an Investment Calculator for simple/compound interest and a Loan Interest Repayment Calculator. Developed during Hyperion Dev Bootcamp, this open-source tool is ready for exploration and contribution.</p>
-                    <a href="https://github.com/DrWho1369/Financial-Calculators" target=”_blank” class="btn btn-warning text-secondary shadow">Calculate Now</a>
+                    <a href="https://github.com/DrWho1369/Financial-Calculators" target=”_blank” class="btn text-light shadow mid-red">Calculate Now</a>
                 </div>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-md-end text-dark bg-white mb-3 border-white" >
+            <div class="card text-md-end text-dark mb-3 border-0 white">
                 <img src="./images/pexels-ann-h-18833779.jpg" class="card-img-top" alt="A Portfolio Website">
                 <div class="card-body">
                     <h5 class="card-title">A CSS & HTML Portfolio</h5>
                     <p class="card-text">Designed with HTML, CSS, JavaScript. Explore my front-end portfolio showcasing CSS mastery, responsiveness, and deployed projects. Seamless navigation, interactive grids, and live application links. Experience the future of web development!</p>
-                    <a href="https://github.com/DrWho1369/portfolio" target=”_blank” class="btn btn-warning text-secondary shadow">Check it out</a>
+                    <a href="https://github.com/DrWho1369/portfolio" target=”_blank” class="btn text-light shadow mid-red">Check it out</a>
                 </div>
             </div>
         </div>
@@ -114,13 +114,13 @@
 
 <!-- Learn About Me section -->
     <a id="aboutTom">
-    <div class="row d-flex justify-content-center p-lg-5" style="background-color: #ff69b486"></a>
+    <div class="row d-flex justify-content-center p-lg-5 white"></a>
         <div class="col-12 col-lg-6">
             <h1 class="text-center text-dark p-5 fw-bold">Lets Learn About Tom</h1>
             <div class="accordion accordion-flush p-lg-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="background-color: #5F093D">
+                        <button class="accordion-button collapsed text-light mid-red" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Who on earth is Tom?
                         </button>
                     </h2>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: #b21368" >
+                        <button class="accordion-button collapsed text-light bright-red" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                         Does Tom even exist?
                         </button>
                     </h2>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color:#d67ba8">
+                        <button class="accordion-button collapsed text-light light-pink" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                         Where can one locate said Tom?
                         </button>
                     </h2>
@@ -190,7 +190,7 @@
 
 <!-- Contact Me Form -->
 <a id="contactSection">
-    <form class="row gy-2 gx-3 align-items-center justify-content-center p-3 m-3" style="background-color: #efebe0"></a>
+    <form class="row gy-2 gx-3 align-items-center justify-content-center p-3 m-3 hot-pink "></a>
         <h1 class="text-center fw-bold pb-5">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
@@ -229,7 +229,7 @@
 
 <!-- Footer section -->
 <div class="row">
-    <footer class="text-center text-lg-start text-light" style="background-color: #2d0272a2">
+    <footer class="text-center text-lg-start text-light mid-red">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
@@ -251,7 +251,7 @@
                 </div>
             </section>
         </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.87)">© 2023 Thomas Baker</div>
+        <div class="text-center p-3 dark-overlay">© 2023 Thomas Baker</div>
     </footer>
 </div>
 <!-- End of footer section -->
