altered hover color for buttons

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
                     <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. It's Amazing! Happy shopping!</p>
-                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn text-light shadow mid-red">Spend Some Money</a>
+                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn button-hover text-light shadow mid-red">Spend Some Money</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A Financial Calculator</h5>
                     <p class="card-text"> Empower your financial decisions with an Investment Calculator for simple/compound interest and a Loan Interest Repayment Calculator. Developed during Hyperion Dev Bootcamp, this open-source tool is ready for exploration and contribution.</p>
-                    <a href="https://github.com/DrWho1369/Financial-Calculators" target=”_blank” class="btn text-light shadow mid-red">Calculate Now</a>
+                    <a href="https://github.com/DrWho1369/Financial-Calculators" target=”_blank” class="btn button-hover text-light shadow mid-red">Calculate Now</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A CSS & HTML Portfolio</h5>
                     <p class="card-text">Designed with HTML, CSS, JavaScript. Explore my front-end portfolio showcasing CSS mastery, responsiveness, and deployed projects. Seamless navigation, interactive grids, and live application links. Experience the future of web development!</p>
-                    <a href="https://github.com/DrWho1369/portfolio" target=”_blank” class="btn text-light shadow mid-red">Check it out</a>
+                    <a href="https://github.com/DrWho1369/portfolio" target=”_blank” class="btn button-hover text-light shadow mid-red">Check it out</a>
                 </div>
             </div>
         </div>
