changed hero image style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
     </div>
 <!-- Navigation Bar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark mid-red">
     <div class="container-fluid">
         <a class="navbar-brand link-dark" href="#">
             <img src="./images/logopink - Copy.png" alt="" width="80" height="35">
@@ -61,10 +61,12 @@
 </nav>
 <!-- Hero section containing a jumbotron -->
 <div class="jumbotron jumbotron-fluid">
-    <div class="container grey ">
-        <h1 class="display-5 fw-bold d-flex justify-content-center align-items-center">Tom Baker</h1>
-        <p class="lead d-flex justify-content-center align-items-center text-center">Full Stack Engineer with projects in JavaScript, Python, and React.</p>
-        <p class="d-flex justify-content-center align-items-center">The foundations are laid. Stay tuned for updates.</p>
+    <div class="container grey">
+        <div class="col-10">
+            <h1 class="display-5 fw-bolder d-flex justify-content-start align-items-center">Tom Baker</h1>
+            <p class="lead d-flex fw-bolder align-items-center">Full Stack Engineer with projects in JavaScript, Python, and React.</p>
+            <p class="d-flex justify-content-start align-items-center">The foundations are laid. Stay tuned for updates.</p>
+        </div>
     </div>
 </div>
 <!-- End of Hero Section -->
@@ -84,7 +86,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
                     <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. It's Amazing! Happy shopping!</p>
-                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn button-hover text-light shadow mid-red">Spend Some Money</a>
+                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn button-hover text-light shadow mid-red ">Spend Some Money</a>
                 </div>
             </div>
         </div>
