fixed header color

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 <a id="portfolio">
 <div class="container-fluid white"></a>
     <div class="row p-lg-5">
-            <div class="col m-2 dark-red" style="background-color: #b2136821">
-                <h2 class="text-center pb-3 fw-bold">SKILLS:</h2>
-                <h6 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h6>
+            <div class="col m-2 mid-red">
+                <h2 class="text-center text-light pb-3 fw-bold">SKILLS:</h2>
+                <h6 class="text-center text-light">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h6>
             </div>
-        <h1 class="text-dark text-center portfolio pb-5 p-5 fw-bold">PORTFOLIO</h1>
+        <h1 class="textmid-red text-center portfolio pb-5 p-5 fw-bold">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card text-dark mb-3 border-0 white">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
@@ -118,7 +118,7 @@
     <a id="aboutTom">
     <div class="row d-flex justify-content-center p-lg-5 white"></a>
         <div class="col-12 col-lg-6">
-            <h1 class="text-center text-dark p-5 fw-bold">Lets Learn About Tom</h1>
+            <h1 class="text-center textmid-red p-5 fw-bold">Lets Learn About Tom</h1>
             <div class="accordion accordion-flush p-lg-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -193,7 +193,7 @@
 <!-- Contact Me Form -->
 <a id="contactSection">
     <form class="row gy-2 gx-3 align-items-center justify-content-center p-3 m-3 hot-pink "></a>
-        <h1 class="text-center fw-bold pb-5">Contact Me!</h1>
+        <h1 class="text-center textmid-red fw-bold pb-5">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
             <input type="text" class="form-control" id="autoSizingInput" placeholder="Your Name">
